...
                case .idle:
                    List {
                        Section {
                            NavigationLink {
                                SearchMonitorListView(apiClient: viewModel.apiClient)
                            } label: {
                                Label("Search Monitors", systemImage: "binoculars")
                            }
                            .accessibilityIdentifier("SearchMonitorsLink")
                        }

                        Section {
                            EmptyStateView(
...
